# rag_system

./: .env.example  .gitignore  README.md  agent.md
.whiteboards/: 01_product_structure.json
backend/: .env.bak  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  chat.py  documents.py  knowledge_bases.py  search.py
backend/app/core/: __init__.py  config.py  db.py  deps.py  local_model.py  logging.py
backend/app/embeddings/: __init__.py  factory.py
backend/app/llm/: __init__.py  factory.py
backend/app/loaders/: __init__.py  base.py  docx_loader.py  factory.py  legacy_office.py  markdown_loader.py  pdf_loader.py  pptx_loader.py
backend/app/models/: __init__.py  base.py  conversation.py  document.py  knowledge_base.py
backend/app/rerankers/: __init__.py  local.py
backend/app/schemas/: __init__.py  chat.py  chunk.py  document.py  knowledge_base.py  search.py
backend/app/services/: __init__.py  agent.py  bm25_store.py  doc_index.py  embedding_resolver.py  image_describer.py  ingest.py  retriever.py
backend/app/splitters/: __init__.py  factory.py  parent_child.py
backend/app/vectorstore/: __init__.py  chroma_store.py
backend/app/websearch/: __init__.py  factory.py
backend/scripts/: reingest_all.py
backend/scripts/eval/: __init__.py  generate_set.py  metrics.py  run_eval.py
backend/tests/: conftest.py  test_agent.py  test_api.py  test_bm25.py  test_chunk_endpoints.py  test_legacy_loaders.py  test_loaders.py  test_retriever.py  test_splitters.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  router.ts  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/api/: client.ts
frontend/src/components/: AppDrawer.vue  ChatPanel.vue  ConversationList.vue  FloatingBall.vue  KnowledgePicker.vue  MessageBubble.vue
frontend/src/stores/: chat.ts  knowledgeBase.ts  settings.ts
frontend/src/styles/: main.css
frontend/src/utils/: index.ts
frontend/src/views/: DocsView.vue  KBView.vue  SearchView.vue  SettingsView.vue
