 [build-system]
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "rag-system-backend"
 version = "0.1.0"
 description = "通用文档问答 RAG 系统后端"
 requires-python = ">=3.11"
 dependencies = [
     # Web
     "fastapi>=0.115.0",
     "uvicorn[standard]>=0.32.0",
     "python-multipart>=0.0.12",
     "sse-starlette>=2.1.3",
     # LangChain 生态
     "langchain>=0.3.7",
     "langchain-community>=0.3.7",
     "langchain-openai>=0.2.7",
     "langchain-text-splitters>=0.3.2",
     "langgraph>=0.2.45",
     # Document loaders
     "pypdf>=5.1.0",
     "pdfplumber>=0.11.4",
     "python-docx>=1.1.2",
     "python-pptx>=1.0.2",
     "openpyxl>=3.1.5",
     "beautifulsoup4>=4.12.3",
    "markdown>=3.7",
    # Embedding & Vector store
    "chromadb>=0.5.20",
    "sentence-transformers>=3.2.1",
    "FlagEmbedding>=1.2.10",
     # Retrieval
     "rank-bm25>=0.2.2",
     "jieba>=0.42.1",
     # Reranker (cross-encoder)
     "torch>=2.3.0",
     "transformers>=4.46.0",
     # Web search
     "tavily-python>=0.5.0",
     "duckduckgo-search>=6.2.1",
     # DB
     "sqlalchemy>=2.0.36",
     "aiosqlite>=0.20.0",
     "alembic>=1.13.3",
     # Settings & utils
     "pydantic>=2.9.2",
     "pydantic-settings>=2.6.1",
     "python-dotenv>=1.0.1",
     "tenacity>=9.0.0",
     "httpx>=0.27.2",
     "loguru>=0.7.2",
     "orjson>=3.10.10",
     "numpy>=1.26.4,<3",
     "rich>=13.9.4",
 ]

 [project.optional-dependencies]
 dev = [
     "pytest>=8.3.3",
     "pytest-asyncio>=0.24.0",
     "pytest-cov>=5.0.0",
     "ruff>=0.7.2",
     "mypy>=1.13.0",
     "httpx>=0.27.2",
 ]

 [project.scripts]
 rag-backend = "app.main:run"

 [tool.setuptools.packages.find]
 include = ["app*"]

 [tool.ruff]
 line-length = 100
 target-version = "py311"

 [tool.ruff.lint]
 select = ["E", "F", "I", "B", "UP", "N"]

 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 testpaths = ["tests"]
